Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.1.24, 10.0.31, 10.2.7, 10.3.1
Description
http://buildbot.askmonty.org/buildbot/builders/kvm-fulltest/builds/13417
nnodb.innodb_information_schema_buffer 'innodb' w1 [ fail ]
|
Test ended at 2018-05-18 01:54:17
|
|
|
CURRENT_TEST: innodb.innodb_information_schema_buffer
|
Warning: /mnt/buildbot/build/mariadb-10.3.7/libmysqld/examples/mysqltest_embedded: unknown variable 'loose-ssl-ca=/mnt/buildbot/build/mariadb-10.3.7/mysql-test/std_data/cacert.pem'
|
Warning: /mnt/buildbot/build/mariadb-10.3.7/libmysqld/examples/mysqltest_embedded: unknown variable 'loose-ssl-cert=/mnt/buildbot/build/mariadb-10.3.7/mysql-test/std_data/client-cert.pem'
|
Warning: /mnt/buildbot/build/mariadb-10.3.7/libmysqld/examples/mysqltest_embedded: unknown variable 'loose-ssl-key=/mnt/buildbot/build/mariadb-10.3.7/mysql-test/std_data/client-key.pem'
|
Warning: /mnt/buildbot/build/mariadb-10.3.7/libmysqld/examples/mysqltest_embedded: unknown option '--loose-skip-ssl'
|
--- /mnt/buildbot/build/mariadb-10.3.7/mysql-test/suite/innodb/r/innodb_information_schema_buffer.result 2018-05-17 23:18:19.000000000 -0400
|
+++ /mnt/buildbot/build/mariadb-10.3.7/mysql-test/suite/innodb/r/innodb_information_schema_buffer.reject 2018-05-18 01:54:15.973896889 -0400
|
@@ -17,6 +17,10 @@
|
and PAGE_STATE="file_page" and PAGE_TYPE="index";
|
TABLE_NAME INDEX_NAME NUMBER_RECORDS DATA_SIZE PAGE_STATE PAGE_TYPE
|
`test`.`infoschema_buffer_test` GEN_CLUST_INDEX 2 58 FILE_PAGE INDEX
|
+`test`.`infoschema_buffer_test` NULL 0 0 FILE_PAGE INDEX
|
+`test`.`infoschema_buffer_test` NULL 0 0 FILE_PAGE INDEX
|
+`test`.`infoschema_buffer_test` NULL 0 0 FILE_PAGE INDEX
|
+`test`.`infoschema_buffer_test` NULL 0 0 FILE_PAGE INDEX
|
CREATE INDEX idx ON infoschema_buffer_test(col1);
|
SELECT TABLE_NAME, INDEX_NAME, NUMBER_RECORDS, DATA_SIZE, PAGE_STATE, PAGE_TYPE
|
FROM INFORMATION_SCHEMA.INNODB_BUFFER_PAGE
|
|
|
mysqltest: Result length mismatch
|
Attachments
Issue Links
- is caused by
-
MDEV-12188 information schema - errors populating fail to free memory, unlock mutexes
-
- Closed
-